# biostats-

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Lancet_Manuscript.docx  README.md  auto-deploy.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  requirements_production.txt  setup.py  一键部署超简单指南.md  📥保存到桌面指南.html
backend/: render.yaml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: advanced_statistics.py  analyses.py  auth.py  billing.py  export.py  statistics.py  (+4 more)
backend/app/core/: config.py  database.py  security.py
backend/app/models/: analysis.py  user.py
backend/app/schemas/: schemas.py
backend/app/services/: advanced_statistics.py  export.py  interpretation.py  statistics.py  stripe_service.py  visualization.py
biostats/: __init__.py  __main__.py  bayesian.py  survival.py  trial.py
data/: anova-examples.json  bayesian-priors.json  clinical-trials-data.json  regression-models.json  sample-datasets.json  sample-size-calculations.json  statistical-tables.json  survival-data.json  test-types.json  test_data.csv  trial-designs.json
docs/: README.md  about.html  index.html  robots.txt  完整文件清单.txt  部署指南_全局.md  部署指南_腾讯云.md  项目方案.md
frontend/: app.html
scripts/: deploy.sh
src/: analyzer.py  api.py  app.py  bootstrap.py  config.py  diagnostic_test.py  longitudinal_analysis.py  meta_analysis.py  mixed_model.py  multivariate_analysis.py  non_parametric.py  power_analysis.py  propensity_score.py  quick.py  server.py  time_series.py  validator.py  visualization.py
