[project]
name = "biostats"
version = "0.1.0"
description = "AI-Powered Biostatistics Platform — Clinical trial design, survival analysis, and statistical inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "MoKangMedical"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "lifelines>=0.27",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "arviz>=0.16",
    "pymc>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
docs = ["sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["biostats*"]

[tool.ruff]
line-length = 100
target-version = "py310"
